--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<inceptionYear>2023</inceptionYear>
 
 	<properties>
-		<revision>1.7.0-SNAPSHOT</revision>
+		<revision>1.7.1-SNAPSHOT</revision>
 		<maven.min-version>3.8.6</maven.min-version>
 		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,6 +24,7 @@
 		<commons-text.version>1.14.0</commons-text.version>
 		<curator.version>5.9.0</curator.version>
 		<zookeeper.version>3.9.4</zookeeper.version>
+		<netty.version>4.1.127.Final</netty.version>
 		<snakeyaml.version>2.5</snakeyaml.version>
 		<commons-cli.version>1.10.0</commons-cli.version>
 		<commons-lang.version>3.19.0</commons-lang.version>
@@ -94,6 +95,19 @@
 			<artifactId>curator-recipes</artifactId>
 			<version>${curator.version}</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-handler</artifactId>
+			<version>${netty.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport-native-epoll</artifactId>
+			<version>${netty.version}</version>
+			<scope>compile</scope>
+            <classifier>linux-x86_64</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
